[project]
name = "glone"
version = "0.4.0"
description = "A CLI to back up all your GitHub repositories."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "João Palmeiro", email = "joaopalmeiro@proton.me" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3.15",
  "Programming Language :: Python :: Implementation",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Utilities",
]
dependencies = [
  "click>=8.4.0",
  "gaveta>=0.6.0",
  "httpx2>=2.2.0",
  "humanize>=4.15.0",
  "platformdirs>=4.0.0",
  "pydantic>=2.13.0",
  "trio>=0.30.0",
]

[project.urls]
Issues = "https://github.com/joaopalmeiro/glone/issues"
Source = "https://github.com/joaopalmeiro/glone"

[project.scripts]
glone = "glone.cli:main"

[dependency-groups]
dev = ["mypy==1.20.1", "ruff==0.15.11"]

[build-system]
requires = ["uv_build==0.11.6"]
build-backend = "uv_build"
